--- a/package.json
+++ b/package.json
@@ -1,25 +1,59 @@
 {
 	"name": "react-listening",
 	"version": "1.0.0",
-	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "cross-env NODE_ENV=dev webpack-dev-server",
-		"build": "cross-env NODE_ENV=production webpack",
+		"start": "webpack-dev-server --config ./webpack/webpack.dev.js --open  --mode  development",
+		"build": "rm -rf dist/ && webpack --mode production --config ./webpack/webpack.prod.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "daisy",
 	"license": "ISC",
+	"proxy": "http://192.168.11.222:8888",
 	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.9.0",
+		"@babel/preset-env": "^7.9.0",
+		"@babel/preset-react": "^7.9.4",
+		"antd": "^4.0.4",
+		"babel-loader": "^8.1.0",
 		"babel-plugin-import": "^1.13.0",
-		"babel-plugin-transform-runtime": "^6.23.0",
-		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
-		"babel-runtime": "^6.26.0",
-		"webpack": "^4.42.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^3.4.2",
+		"file-loader": "^6.0.0",
+		"http-proxy-middleware": "^1.0.3",
+		"node-sass": "^4.13.1",
+		"react-router-dom": "^5.1.2",
+		"sass-loader": "^8.0.2",
+		"style-loader": "^1.1.3",
+		"uglifyjs-webpack-plugin": "^2.2.0",
+		"webpack": "^4.42.1",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3",
 		"webpack-merge": "^4.2.2"
 	},
 	"dependencies": {
-		"babel-polyfill": "^6.26.0"
-	}
+		"@babel/polyfill": "^7.8.7",
+		"@babel/runtime": "^7.9.2",
+		"@babel/runtime-corejs2": "^7.9.2",
+		"axios": "^0.19.2",
+		"core-js": "^2.6.11",
+		"html-webpack-plugin": "^4.0.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1"
+	},
+	"directories": {
+		"doc": "docs"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/diasywengithub/react-Listening.git"
+	},
+	"bugs": {
+		"url": "https://github.com/diasywengithub/react-Listening/issues"
+	},
+	"homepage": "https://github.com/diasywengithub/react-Listening#readme",
+	"description": ""
 }
